fix: Background clipping issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,8 +41,8 @@ html {
   background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg"><rect width="100%" height="100%" fill="none" stroke="rgb(223,242,238)" stroke-width="2px" opacity="0.5" /></svg>');
   margin: 6px;
   padding: 10px;
-  min-width: 360px;
-  width: calc(100% - 12px);
+  min-width: 348px;
+  width: calc(100dvw - 12px);
   height: calc(100% - 12px);
   overflow-x: hidden;
 }
