--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -57,13 +57,11 @@
 }
 
 .spreadsheet {
-  margin: 0 4px;
-  width: calc(100% - 8px);
+  width: 100%;
   height: 240px;
   border: 1px dashed var(--spreadsheet);
   @media screen and (min-width: 768px) {
     order: 1;
-    margin: 0;
     width: 65%;
     height: 100%;
     flex-shrink: 0;
